Added a counter to count function calls

--- a/llama_index/workflow.ipynb
+++ b/llama_index/workflow.ipynb
@@ -382,6 +382,90 @@
    "source": [
     "response"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9bdde91d",
+   "metadata": {},
+   "source": [
+    "Agent tools can also modify the workflow state we mentioned earlier. Before starting the workflow, we can provide an initial state dict that will be available to all agents. The state is stored in the state key of the workflow context. It will be injected into the state_prompt which augments each new user message.\n",
+    "\n",
+    "Let’s inject a counter to count function calls by modifying the previous example:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "6fc1ee10",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "from llama_index.core.workflow import Context\n",
+    "\n",
+    "# Define some tools\n",
+    "async def add(ctx: Context, a: int, b: int) -> int:\n",
+    "    \"\"\"Add two numbers.\"\"\"\n",
+    "    # update our count\n",
+    "    cur_state = await ctx.store.get(\"state\")\n",
+    "    cur_state[\"num_fn_calls\"] += 1\n",
+    "    await ctx.store.set(\"state\", cur_state)\n",
+    "\n",
+    "    return a + b\n",
+    "\n",
+    "async def multiply(ctx: Context, a: int, b: int) -> int:\n",
+    "    \"\"\"Multiply two numbers.\"\"\"\n",
+    "    # update our count\n",
+    "    cur_state = await ctx.store.get(\"state\")\n",
+    "    cur_state[\"num_fn_calls\"] += 1\n",
+    "    await ctx.store.set(\"state\", cur_state)\n",
+    "\n",
+    "    return a * b\n",
+    "\n",
+    "llm = Ollama(\n",
+    "    model=\"qwen2.5-coder:7b\",  # or \"mistral\", \"phi\", \"codellama\", etc.\n",
+    "    request_timeout=60.0,\n",
+    ")\n",
+    "\n",
+    "multiply_agent = ReActAgent(\n",
+    "    name=\"multiply_agent\",\n",
+    "    description=\"Is able to multiply two integers\",\n",
+    "    system_prompt=\"A helpful assistant that can use a tool to multiply numbers.\",\n",
+    "    tools=[multiply],\n",
+    "    llm=llm,\n",
+    ")\n",
+    "\n",
+    "addition_agent = ReActAgent(\n",
+    "    name=\"add_agent\",\n",
+    "    description=\"Is able to add two integers\",\n",
+    "    system_prompt=\"A helpful assistant that can use a tool to add numbers.\",\n",
+    "    tools=[add],\n",
+    "    llm=llm,\n",
+    ")\n",
+    "\n",
+    "\n",
+    "workflow = AgentWorkflow(\n",
+    "    agents=[multiply_agent, addition_agent],\n",
+    "    root_agent=\"multiply_agent\",\n",
+    "    initial_state={\"num_fn_calls\": 0},\n",
+    "    state_prompt=\"Current state: {state}. User message: {msg}\",\n",
+    ")\n",
+    "\n",
+    "# run the workflow with context\n",
+    "ctx = Context(workflow)\n",
+    "response = await workflow.run(user_msg=\"Can you add 5 and 3, then multiply the results by 7, then add 10 finally?\", ctx=ctx)\n",
+    "\n",
+    "# pull out and inspect the state\n",
+    "state = await ctx.store.get(\"state\")\n",
+    "print(state[\"num_fn_calls\"])"
+   ]
   }
  ],
  "metadata": {
